# pymap

./: .dockerignore  .env.template  .gitignore  .gitmodules  README.md  docker-compose.aio.yml  docker-compose.extend.yml  docker-compose.mail.yml  docker-compose.optional.yml  docker-compose.test.yml  docker-compose.yml  file_generator.py  file_splitter.py
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
Dockerfiles/: README.md  celery.yml  django.yml
Dockerfiles/aio/: Dockerfile  django_init.sh  nginx.conf  supervisord.conf
Dockerfiles/celery/: Dockerfile
Dockerfiles/django/: Dockerfile  init.sh
Dockerfiles/email-server/: Dockerfile  Dockerfile.mail  Dockerfile.roundcube  bodies.list  generate_messages.sh  init.sh  setup.sh  subjects.list  supervisord.conf
Dockerfiles/email-server/dovecot/: dovecot.conf
Dockerfiles/email-server/postfix/: main.cf
Dockerfiles/nginx/: Dockerfile  nginx.conf
Dockerfiles/rainloop/: Dockerfile  supervisord.conf
Dockerfiles/rainloop/nginx/: nginx.conf
Dockerfiles/rainloop/php-fpm/: www.conf
Dockerfiles/rainloop/rainloop/: config.ini
configs/: NOTES.md  vsftpd.conf
dockers/: README.md  stack.yml
dockers/alpine/: Dockerfile  README.md
dockers/centos8/: Dockerfile  Readme.md
dockers/kali/: Dockerfile  README.md
dockers/ubuntu20.04/: Dockerfile  README.md
src/: .pylintrc  cli.py  config-template.json  config.dev-template.json  imapsync_help  instantiate_db.py  manage.py  mypy.ini  pyproject.toml  tmux_dev.sh  tmux_prod.sh  worker.state
src/core/: pymap_core.py  tools.py
src/migrations/versions/: 1f0719a035e4_.py  462b94f418fc_.py  4ae1003b4831_.py  4df14302c22a_.py  51acde7d55ea_.py  90cc6dc4c93d_.py  9dfd2228f643_.py  b0d41780f065_.py  b5d2315abbfa_.py  bf325dfd3207_.py  c48ec9597f8d_.py  e3c75452aa15_.py
src/migrator/: admin.py  apps.py  converters.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/migrator/fixtures/: delete_mothly.json  periodic.json  purge_results.json  validate_finished.json
src/migrator/management/commands/: create_management_groups.py  generate_random_tasks.py  initadmin.py  reset_pass.py
src/migrator/middleware/: require_auth.py
src/migrator/migrations/: 0001_initial.py  0002_alter_celerytask_run_time.py  0003_alter_celerytask_destination_and_more.py  0004_celerytask_results_purged.py  0005_userpreferences.py  0006_celerytask_terminated.py  0007_remove_userpreferences_dark_mode_enabled_and_more.py  0008_celerytask_custom_label_and_more.py
src/migrator/templates/: account.html  home.html  log_details.html  login.html  sync.html  task_details.html  tasks.html  update_account.html  update_preferences.html
src/migrator/templates/admin/: base_site.html  run_task.html  tasks.html
src/migrator/templates/structure/: base.html  datatables.html  footer.html  navbar.html  task_changed_modal.html
src/migrator/templatetags/: user_tags.py
src/migrator/utilites/: helpers.py  strings.py
src/pymap/: asgi.py  celery.py  settings.py  urls.py  user_settings.py  wsgi.py
src/scripts/: build_client_dependencies_cache.py  generate_random_logs.py  get_start_time.sh  grep_errors.sh  utils.py
src/server/: __init__.py  config.dev.json.template  config.json.template  extensions.py  tasks.py  utils.py
src/server/models/: __init__.py  task_model.py  tasks.py  user_model.py  users.py
src/server/routes/: admin.py  apiv1.py  apiv2.py  login.py  tasks.py  user_management.py  views.py
src/tests/: __init__.py  api_request.sh  test_heavy_request.json  test_request.json
src/tests/core/: __init__.py  test_api_generator.py  test_core_functions.py  test_script_generator.py
src/tests/server/: test_utils.py
src/tests/server/apiv2/: __init__.py  test_admin_functionality.py  test_usermanagement.py
templates/nginx/: nginx.conf
templates/postgresql/: 01_add_celery.sh
