[tool.poetry]
name = "pymap"
version = "2.0.0-beta"
description = ""
authors = ["hallowslab <hallow.tech.lab@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
djangorestframework = "^3.14.0"
flower = "^2.0.1"
docutils = "^0.20.1"
redis = {extras = ["hiredis"], version = "^5.0.1"}
uvicorn = "^0.27.1"
gunicorn = "^21.2.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
celery = {extras = ["redis"], version = "^5.4.0"}
django-celery-results = "^2.5.1"
gevent = "^24.2.1"
pybloom-live = "^4.0.0"
greenlet = "^3.0.3"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.8.0"
black = "^22.3.0"
pytest = "^6.2.5"
autoflake = "^1.4"
coverage = "^6.3.2"
mypy = ">=1.7.0"
django-debug-toolbar = "^4.2.0"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.7"}
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.14.5"}

[tool.taskipy.tasks]
serverDev = "DJANGO_ENV='development' poetry run python manage.py runserver"
workerDev = "DJANGO_ENV='development' task worker"
monitorDev = "DJANGO_ENV='development' task monitor"
server = "python -m gunicorn pymap.asgi:application -k uvicorn.workers.UvicornWorker"
worker = "celery -A pymap.celery worker -E --pool=gevent"
monitor = "celery -A pymap.celery flower --basic-auth='admin:admin,dev:localhost' --address='localhost'"
### Database tasks
upgradeDev = "DJANGO_ENV='development' task upgrade"
upgrade = "task prep && task migr"
prep = "python manage.py makemigrations"
migr = "python manage.py migrate"
### Formatting, tests
check = "DJANGO_ENV='development' task format"
format = "task black && task flake && task mypy"
black = "black . "
flake = "autoflake -i -r ."
mypy = "mypy --strict ."
testCore = "pytest tests/core"
### Coverage
coverage = "coverage run -m pytest && coverage report"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
